--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react-dom": "^19",
     "cross-env": "^10.1.0",
     "postcss": "^8.5",
+    "sharp": "^0.33.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
