--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "16.1.0",
     "recharts": "2.15.4",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -73,6 +74,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "cross-env": "^10.1.0",
     "postcss": "^8.5",
     "sharp": "^0.33.5",
